ingress-networkLB/example-2host/echo_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: web1.cloudjethost.com
    http:
      paths:
      - backend:
          serviceName: echo1
          servicePort: 80
  - host: web2.cloudjethost.com
    http:
      paths:
      - backend:
          serviceName: echo2
          servicePort: 80
